syntax = "proto3";
package skeleton;               // This is optional to avoid name clashes
option go_package = "api";      // We are using this as the package name instead of above

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
  }
  
  message HelloRequest {
    string name = 1;
  }
  
  message HelloReply {
    string message = 1;
  }

  // The PROTOC command
  // protoc -I skeleton/ skeleton/api/service.proto --go_out=plugins=grpc:skeleton
